--- a/page.html
+++ b/page.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page blanche</title>
+    <title>Page bleu</title>
   </head>
-  <body>
+  <body style="background-color: #1abc9c;">
   Cette page est blanche!
   </body>
 </html>
