--- a/page.html
+++ b/page.html
@@ -3,7 +3,7 @@
   <head>
     <title>Page bleu</title>
   </head>
-  <body style="background-color: #1abc9c;">
-  Cette page est blanche!
+  <body style="background-color: #F3FF33;">
+  Cette page est jaune!
   </body>
 </html>
